# CustomGPT-Security-Framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GPT_RedTeam_Testing_Guide.md  GPT_Security_Checklist.md  GPT_Security_Template.md  README.md  REPRO_README.md  REVIEW_CHECKLIST.md  check_results.py  pyproject.toml  redteam_prompts.csv  results.csv  run_redteam.sh  run_redteam_py3.py  saucy_sommelier.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bandit.yml  ci.yml
tests/: test_runner.py
