[project]
name = "gpt-security-framework"
version = "2.0.0"
description = "Security hardening framework for custom GPTs — policy templates, checklists, and automated red-team testing."
requires-python = ">=3.8"
license = "CC0-1.0"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=5.0",
]

[project.scripts]
gpt-redteam = "run_redteam_py3:main"
